CodexNaturalis/src/main/resources/GUI/global.css
@font-face {
    src: url('Styles/fonts/SketchGothicSchool.ttf');
}

.customFont {
    -fx-font-family: 'Sketch Gothic School', sans-serif;
}

.list-cell {
    -fx-alignment: center ;
}

.non-empty-list-cell {
    -fx-border-color: #444;
    -fx-border-width: 1px;
    -fx-border-style: solid;
}


.bordersCodexStyle{
    -fx-border-color: rgb(216, 196, 113), rgb(0, 0, 0), rgb(0, 0, 0), rgb(0, 0, 0);
    -fx-border-width: 12, 1, 3, 1;
    -fx-border-insets: -12, -7, -2, -7;
    -fx-border-radius: 20;
    -fx-border-style: solid, solid, solid, solid;
    -fx-background-color: rgb(239, 230, 191);
    -fx-background-radius: 20;

    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
}

